--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Martin Vot – Python Developer
 description: Python freelancer specialized in web scraping, automation and data collection.
+style: "/style.css"
